workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__a_folded_group_shows_its_most_urgent_state.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▸ B-Metric               ◆ │                                                                       "
" ▾ bloom                    │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ lisa                     │                                                                       "
"   ✔ sidebar-groups         │                                                                       "
"                            │                     ⏎ opens the selected worktree                     "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                              ⏎ open · n new · p project · d ungroup · r restart · ? help · q quit  "
