workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__a_folder_without_repositories_says_why_it_cannot_be_a_group.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ Add project ─────────────────────────────────────────┐        "
"   ○ docs-update            │       │  ~/Workspace/                                        │        "
" ▾ lisa                     │       │  › arch▏                                             │        "
"   no worktrees · n         │       │                                                      │        "
" ▾ web                      │       │  ▐   archive/                                        │        "
"   ✔ new-checkout           │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │                                                      │        "
"                            │       │  no repositories in this folder                      │        "
"                            │       │  ⏎ open · ^g as group · ^n new group · esc cancel    │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
