workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__a_group_without_agents_shows_a_hint.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ B-Metric                 │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ bloom                    │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ lisa                     │                                                                       "
"   ✔ sidebar-groups         │                    n starts a worktree in B-Metric                    "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
" ⏎ fold · n new · e rename · d ungroup · ? keys                                                     "
