workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__a_long_agent_name_is_cut_before_the_tag.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                                                                       "
"▐▾ B-Metric                 │                                                                       "
"   ◉ fix-ingest-lag     api │                                                                       "
"   ◉ dev-2368-ati… consumer │                                                                       "
"   ◆ dashboard-filter   web │                                                                       "
" ▾ bloom                    │                                                                       "
"   no worktrees · n         │                    n starts a worktree in B-Metric                    "
" ▾ lisa                     │                                                                       "
"   ✔ sidebar-groups         │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
" ⏎ fold · n new · e rename · d ungroup · ? keys                                                     "
