workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__a_scrolled_pane_says_how_far_back_it_is_and_hides_the_cursor.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │old line                                                               "
" ▾ api                      │                                                                       "
"▐  ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │                                                                       "
"   ○ docs-update            │                                                                       "
" ▾ lisa                     │                                                                       "
"   no worktrees · n         │                                                                       "
" ▾ web                      │                                                                       "
"   ✔ new-checkout           │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │ ↑ 42 lines back · scroll down or type to return                       "
" ^a sidebar                                                                  api/fix-login · claude "
