workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__a_short_terminal_swaps_the_wordmark_for_the_name_and_keeps_the_steps.snap
---
source: src/ui/render_tests.rs
expression: t.backend()
---
" PROJECTS                   │                               "
"▐▾ api                      │                               "
"   ◉ fix-login              │ LISA                          "
"   ◆ rate-limit             │                               "
"   ○ docs-update            │ n  starts a worktree in api   "
" ▾ lisa                     │ p  adds a project or a group  "
"   no worktrees · n         │ ?  shows every key            "
" ▾ web                      │                               "
"   ✔ new-checkout           │ 1 needs you · 1 working       "
"                            │                               "
"                            │                               "
" ⏎ fold · n new · e rename · ? keys                         "
