workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__a_suggestion_is_one_line_at_the_top_and_fills_the_model.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │                                                                       "
"   ○ docs-update            │                                                                       "
" ▾ lisa                     │       ┌ New worktree in api · staccato ──────────────────────┐        "
"   no worktrees · n         │       │  Jev suggests claude · opus · high · 86% sure        │        "
" ▾ web                      │       │                                                      │        "
"   ✔ new-checkout           │       │› Agent   ● claude                                    │        "
"                            │       │          ○ opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Model   ‹ opus ›   effort ‹ high ›                  │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
