workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__agent_without_a_catalog_hides_the_model_and_warns.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"▐▾ api                      │                                                                       "
"   ◉ fix-login              │                                                                       "
"   ◆ rate-limit             │       ┌ New worktree in api ─────────────────────────────────┐        "
"   ○ docs-update            │       │  Name    fix-login-redirect                          │        "
" ▾ web                      │       │          branch: fix-login-redirect                  │        "
"   ✔ new-checkout           │       │                                                      │        "
" ▾ lisa                     │       │  Task    Fix the redirect loop on login when the     │        "
"   no worktrees · n         │       │          session cookie has expired                  │        "
"                            │       │          task is not sent to opencode                │        "
"                            │       │                                                      │        "
"                            │       │› Agent   ○ claude                                    │        "
"                            │       │          ● opencode  no full autonomy                │        "
"                            │       │          ○ gemini  not installed                     │        "
"                            │       │                                                      │        "
"                            │       │  Mode    (•) normal   ( ) full autonomy              │        "
"                            │       │                                                      │        "
"                            │       │  ⏎ create · tab next field · ←→ change · esc cancel  │        "
"                            │       └──────────────────────────────────────────────────────┘        "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                                                                                                    "
