workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__empty_workspace_explains_how_to_start.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
" PROJECTS                   │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                            No projects yet                            "
"                            │                                                                       "
"                            │                           p  add a project                            "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                            │                                                                       "
"                    ⏎ open · n new · p project · e rename · d remove · r restart · ? help · q quit  "
