workspace/src/ui/snapshots/lisa_workspace__ui__render__tests__exited_agent_shows_a_restart_banner.snap
---
source: src/ui/render_tests.rs
expression: draw(&a).backend()
---
"> fix the login redirect                                               │ PROJECTS                   "
"⏺ Updating middleware...                                               │ ▾ api                      "
"✳ Waiting for input                                                    │▐  ✖ fix-login              "
"                                                                       │   ◆ rate-limit             "
"                                                                       │   ○ docs-update            "
"                                                                       │ ▾ web                      "
"                                                                       │   ✔ new-checkout           "
"                                                                       │ ▾ lisa                     "
"                                                                       │   no worktrees · n         "
"                                                                       │                            "
" agent exited (code 1) · r restart                                     │                            "
" api/fix-login · claude                                                                    ^a menu  "
